@@ -1,5 +1,10 @@
 2008-09-25  kitone  <kitone@gna.org>
 
+	* src/utility.h:
+	Fix: debug msg (from_string).
+
+2008-09-25  kitone  <kitone@gna.org>
+
 	* src/Encodings.cc:
 	* src/Encodings.h:
 	Add functions convert_to_utf8_from_charset and convert_to_utf8.
